# mif-ingest-to-lakehouse-infra-dev_v2

./: DEVELOPMENT.md
agent-platform/: .gitignore  README.md
agent-platform/backend/: .env.example  pyproject.toml
agent-platform/backend/api/: __init__.py  auth.py  health.py
agent-platform/backend/core/: __init__.py  config.py
agent-platform/backend/database/: __init__.py
agent-platform/backend/models/: __init__.py
agent-platform/backend/repositories/: __init__.py
agent-platform/backend/schemas/: __init__.py
agent-platform/backend/services/: __init__.py  github_oauth.py  session.py
agent-platform/backend/tests/unit/: test_config.py
agent-platform/docs/: ARCHITECTURE.md  FRONTEND_COMPONENT_CONTRACTS.md  FRONTEND_COMPONENT_FREEZE_COMPLETE.md  FRONTEND_FREEZE.md  KNOWLEDGE_LAYER_FREEZE.md  LANGGRAPH_STATE_FREEZE.md  PHASE-1_IMPLEMENTATION_COMPLETION_REPORT.md  STEP-11.1_FINAL_ARCHITECTURE_AUDIT_PRODUCTION_READINESS_FREEZE.md  STEP-11.2_PRODUCTION_OPERATIONS_DEPLOYMENT_FREEZE.md  STEP-11.3_ENTERPRISE_GOVERNANCE_SECURITY_SRE_RUNBOOKS_FREEZE.md  STEP-11.4_ENTERPRISE_GAP_CLOSURE_FREEZE.md  STEP-11_COMPLETE_IMPLEMENTATION_PLANNING_FREEZE.md  STEP-12.1_PHASE-1_VERIFICATION_AND_EVIDENCE_AUDIT.md  STEP-12.2.1_DATABASE_FREEZE_TRACEABILITY_VERIFICATION.md  STEP-12.2.2_KNOWLEDGE_LAYER_FREEZE_TRACEABILITY_VERIFICATION.md  STEP-12.2.3_LANGGRAPH_FREEZE_TRACEABILITY_VERIFICATION.md  (+7 more)
knowledge_base/: mif-glue-job-creation-terraform-script-process.md
project_information/: cell8  imp_cell  mif-glue-job-creation-terraform-script-process.md
(+3 files in other folders)
